--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "homepage": "https://github.com/ecomcoders/ecomcoders-loggly",
     "type": "magento2-module",
     "require": {
-        "php": "~5.6.0|~7.0.0"
+        "php": "~5.6.0|~7.0.0|~7.1.0"
     },
     "autoload": {
         "files": [ "registration.php" ],
